catalog-service/target/kubernetes/knative.yml
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
    app.quarkus.io/build-timestamp: 2021-10-14 - 00:51:00 +0000
  labels:
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.kubernetes.io/name: catalog
  name: catalog
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.kubernetes.io/name: catalog
    spec:
      containers:
      - image: danieloh/catalog:1.0-SNAPSHOT
        name: catalog
        ports:
        - containerPort: 8180
          name: http1
          protocol: TCP
