catalog-service/target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/redhat-mw-demos/quarkus-coolstore.git
    app.quarkus.io/build-timestamp: 2021-07-14 - 19:54:56 +0000
    app.quarkus.io/commit-id: 11cb994abf1d92f6917706073c9987089945e752
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: catalog
spec:
  ports:
  - name: http
    port: 8180
    targetPort: 8180
  selector:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/redhat-mw-demos/quarkus-coolstore.git
    app.quarkus.io/build-timestamp: 2021-07-14 - 19:54:56 +0000
    app.quarkus.io/commit-id: 11cb994abf1d92f6917706073c9987089945e752
  labels:
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.kubernetes.io/name: catalog
  name: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0-SNAPSHOT
      app.kubernetes.io/name: catalog
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/redhat-mw-demos/quarkus-coolstore.git
        app.quarkus.io/build-timestamp: 2021-07-14 - 19:54:56 +0000
        app.quarkus.io/commit-id: 11cb994abf1d92f6917706073c9987089945e752
      labels:
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.kubernetes.io/name: catalog
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: danieloh/catalog:1.0-SNAPSHOT
        imagePullPolicy: Always
        name: catalog
        ports:
        - containerPort: 8180
          name: http
          protocol: TCP
