catalog-service/target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-10-14 - 00:51:00 +0000
    app.openshift.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
    app.quarkus.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: catalog
spec:
  ports:
  - name: http
    port: 8180
    targetPort: 8180
  selector:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-10-14 - 00:51:00 +0000
    app.openshift.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
    app.quarkus.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
  labels:
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: catalog
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: catalog
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2021-10-14 - 00:51:00 +0000
        app.openshift.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
        app.quarkus.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: catalog
        app.kubernetes.io/version: 1.0-SNAPSHOT
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_JAR
          value: /deployments/catalog-1.0-SNAPSHOT-runner.jar
        image: danieloh/catalog:1.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: catalog
        ports:
        - containerPort: 8180
          name: http
          protocol: TCP
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - catalog
      from:
        kind: ImageStreamTag
        name: catalog:1.0-SNAPSHOT
    type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-10-14 - 00:51:00 +0000
    app.openshift.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
    app.quarkus.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: catalog
spec:
  host: ""
  path: /
  port:
    targetPort: 8180
  to:
    kind: Service
    name: catalog
